# VERTA

./: .gitignore  GUI_README.md  INTENT_RECOGNITION.md  README.md  benchmark.py  config.yaml  example_load_intent_models.py  launch_gui.py  pyproject.toml
docs/: README.html
docs/examples/: README.html
docs/gui/: README.html
docs/route_analyzer_ruedi99ms/: index.html  ra_clustering.html  ra_commands.html  ra_config.html  ra_consistency.html  ra_data_loader.html  ra_decisions.html  ra_gaze.html  ra_geometry.html  ra_gui.html  ra_intent_recognition.html  ra_logging.html  ra_metrics.html  ra_plotting.html  ra_prediction.html  ra_progress.html  ra_validation.html
docs/tests/: README.html
docs/verta/: index.html  verta_clustering.html  verta_commands.html  verta_config.html  verta_consistency.html  verta_data_loader.html  verta_decisions.html  verta_gaze.html  verta_geometry.html  verta_gui.html  verta_intent_recognition.html  verta_logging.html  verta_metrics.html  verta_plotting.html  verta_prediction.html  verta_progress.html  verta_validation.html
examples/: README.md  example_load_intent_models.py  visualize_intent_concepts.py
examples_intent/: example_load_intent_models.py
gui/: README.md  launch.py  requirements.txt
paper/: apa_style.csl  paper.bib  paper.md
project/: INTENT_RECOGNITION.md  INTENT_RECOGNITION_GUIDE.md  example_intent_recognition.py  example_load_intent_models.py  ra_consistency.py  ra_gaze.py  ra_gui.py  ra_intent_recognition.py  requirements_gui.txt
route_analyzer/: __init__.py  __main__.py  ra_cli.py  ra_commands.py  ra_commands_enhanced.py  ra_commands_intent.py  ra_commands_predict.py  ra_config.py  ra_data_loader.py  ra_decisions.py  ra_gaze.py  ra_geometry.py  ra_gui.py  ra_logging.py  ra_metrics.py  ra_plotting.py  ra_prediction.py  ra_progress.py  ra_validation.py
sample_data/: Record_2025-01-13_08-44-18.csv  Record_2025-01-13_10-34-41.csv  Record_2025-01-13_10-43-16.csv  Record_2025-01-13_11-13-38.csv  Record_2025-01-13_12-34-34.csv  Record_2025-01-14_01-06-53.csv  Record_2025-01-14_02-02-53.csv  Record_2025-01-14_02-36-31.csv  Record_2025-01-14_03-03-21.csv  Record_2025-01-14_03-40-18.csv  Record_2025-01-14_09-31-50.csv  Record_2025-01-14_10-25-31.csv  Record_2025-01-14_10-34-34.csv  Record_2025-01-14_11-20-27.csv  Record_2025-01-14_11-34-46.csv  Record_2025-01-14_12-41-00.csv  Record_2025-01-15_01-07-06.csv
src/route_analyzer_ruedi99ms/: __init__.py  __main__.py  ra_commands.py  ra_data_loader.py  ra_decisions.py  ra_gui.py  ra_prediction.py
src/verta/: __init__.py  __main__.py  verta_clustering.py  verta_commands.py  verta_config.py  verta_consistency.py  verta_data_loader.py  verta_decisions.py  verta_gaze.py  verta_geometry.py  verta_gui.py  verta_intent_recognition.py  verta_logging.py  verta_metrics.py  verta_plotting.py  verta_prediction.py  verta_progress.py
tests/: README.md  __init__.py  conftest.py  test_commands.py  test_data_loader.py  test_geometry.py  test_plotting.py
