[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "verta"
version = "1.0.6"
description = "VERTA - Virtual Environment Route and Trajectory Analyzer: A Python tool for route and trajectory analysis in virtual environments"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "Niklas Suhre", email="suhre@verkehr.tu-darmstadt.de"}
]
keywords = [
    "trajectory-analysis",
    "route-analysis",
    "virtual-reality",
    "vr",
    "behavioral-analysis",
    "machine-learning",
    "intent-recognition",
    "gaze-tracking",
    "spatial-analysis"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0", 
    "matplotlib>=3.3.0",
    "scikit-learn>=1.0.0",
    "tqdm>=4.60.0",
    "seaborn>=0.12.0",
]

[project.optional-dependencies]
yaml = ["pyyaml"]
parquet = ["pyarrow"]
gui = ["streamlit>=1.28.0", "plotly>=5.15.0"]
test = ["pytest>=7.0.0"]

[project.scripts]
verta = "verta.__main__:main"

[project.urls]
Homepage = "https://github.com/ruedi99ms/VERTA"
Documentation = "https://github.com/ruedi99ms/VERTA#readme"
Repository = "https://github.com/ruedi99ms/VERTA"
Issues = "https://github.com/ruedi99ms/VERTA/issues"

[tool.setuptools]
packages = ["verta"]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
pythonpath = ["src", "."]